Guide page template update

--- a/public/template/guide_step2.html
+++ b/public/template/guide_step2.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
-<link href="stylesheets/setting.css" rel="stylesheet" type="text/css" />
+<link href="stylesheets/guide.css" rel="stylesheet" type="text/css" />
 <script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
@@ -38,14 +38,16 @@
       </ul>
     </div>
     <div id="wrapper950">
-    	<div class="whitespace setting">
-            <h1 class="main_title">帐号设置</h1>
-            <div id="stylized" class="myform">
-            <form id="form" name="form" method="post" action="#">
-                <div class="left">
+    	<div id="guide">
+        	<div class="wel"><span class="step"><img src="images/common/guide_step2_icon.png" width="109" height="109" alt="第一步" /></span><img src="images/common/guide_step2_t.gif" width="811" height="100" /></div>
+            <div class="paper">
+            <div class="top"></div>
+                <div class="mid clearfix">
+                	<div class="step2">
+                   	  <div class="left">
                   <div class="required">
                		<label><span>*</span>用户名</label>
-                      xiaoying@test.com <a href="user_password.html">修改密码</a>
+                      xiaoying@test.com 
                    </div>
                    <div class="required">
                        <label class="vm"><span>*</span>昵称</label>
@@ -78,51 +80,18 @@
                    		<label class="vm">博客地址</label>
                        <input name="text" type="text" class="text name mr5" value="http://luoqihome.blogbus.com" />
                    </div>
-                    <div class="optional">
-                   		<label>个性域名</label>
-                       http://iwine.com/sheren <span class=" icon_fol">您已经设置了个性域名</span>
-                   </div>
-                   <div class="optional">
-                   		<label class="vm">个性域名</label>
-                       您还没有设置个性域名 <a href="user_url_setting.html" class="btn_gray"><span>现在设置</span></a>
-                   </div>
                    <div class="optional">
                    		<label>介绍</label>
-                       <textarea name="" cols="" rows=""></textarea>
+                     <textarea style="width:250px;height:100px;" name="" cols="" rows=""></textarea>
                    </div>
-                  <div class="optional">
-               		<label>隐私/通知设置</label>
-                      <a href="user_notice_setting.html" class="btn_gray"><span>更改隐私/通知设置</span></a>
-                   </div>
-                  <div class="optional">
-               		<label style="padding-top:13px;">同步设置</label>
-                    <a href="#"><img src="images/common/icon_sina_on.png" width="44" height="44" align="absmiddle" /></a>
-                    <a href="#"><img src="images/common/icon_qq_on.png" width="44" height="44" align="absmiddle" /></a>
-                    <a href="#"><img src="images/common/icon_douban_on.png" width="44" height="44" align="absmiddle" /></a>
-                    <a href="#"><img src="images/common/icon_kaixin_on.png" width="44" height="44" align="absmiddle" /></a>
-                    <a href="#"><img src="images/common/icon_renren_on.png" width="44" height="44" align="absmiddle" /></a>
-                    <a href="user_syn_setting.html" class="btn_gray  ml10"><span>更改同步设置</span></a>
-                  </div>
-                    <div class="mt10">
-                       <label>&nbsp;</label>
-                       <div class="content"><a href="add_wine_new_detail_2.html" class="btn_gray mr5"><span>保存</span></a></div>
-                    </div>
                    <div class="clear"></div>
                </div>
-               <div class="right">
-               		<div class="avatar">
-                      <img src="images/common/userpic.jpg" width="130" height="130" />
-                       <p class="mt10" style="text-align:center;width:130px;"><a href="user_picupload.html" class="btn_gray"><span>修改头像</span></a></p>
                     </div>
-               </div>
-               <div class="clear"></div>
-            </form>
+                </div>
+                <div class="bot"></div>
+          </div>
+            <div class="align_c mt20"><a href="guide_step3.html"><img src="images/common/btn_next.jpg" alt="下一步" width="176" height="51" /></a></div>
         </div>
-   	  </div>
-    </div>
-    <div id="footer">
-        <div class="link"><a href="aboutus.html">关于我们</a> | <a href="contactus.html">联系我们</a> | <a href="help.html">帮助中心</a> | <a href="privacy.html">隐私条款</a> | <a href="agreement.html">用户协议</a> | <a href="disclaimer.html">免责声明</a> | <a href="sitemap.html">网站地图</a> | <a href="feedback.html">意见反馈</a></div>
-        <div class="copyright">Copyright © 2011 iWine, Inc. All rights reserved. <a href="#">沪ICP备12345678号</a></div>
     </div>
 </body>
 </html>
