--- a/public/template/guide_step4.html
+++ b/public/template/guide_step4.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
+<link href="stylesheets/guide.css" rel="stylesheet" type="text/css" />
 <script src="javascripts/input.js" type="text/javascript"></script>
 </head>
 
@@ -37,121 +38,92 @@
       </ul>
     </div>
     <div id="wrapper950">
-    	<div id="recommend">
-        	<div class="wel"><img src="images/common/recommend_wel.gif" width="626" height="95" /></div>
-<div class="paper wine">
-            	<div class="top"></div>
+    	<div id="guide">
+        	<div class="wel"><span class="step"><img src="images/common/guide_step4_icon.png" width="109" height="109" alt="第一步" /></span><img src="images/common/guide_step3_t.gif" width="811" height="100" /></div>
+            <div class="paper wine">
+            <div class="top"></div>
                 <div class="mid">
                 	<ul>
-                    	<li class="mb40">
-                   	    	<img src="images/test/wine130.jpg" width="130" height="130" />
+                    	<li class=""> <a href="wine_profile.html"><img src="images/test/wine130.jpg" width="130" height="130" /></a>
                         	<div class="meta">
-                            	<h1 class="zh">2001拉菲珍宝</h1>
-								<h1 class="en">2001 Carruades de Lafite</h1>
+                       	    <h1 class="zh"><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+								<h1 class="en"><a href="wine_profile.html">2001 Carruades de Lafite</a></h1>
                                 <span class="gray">红葡萄酒</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
                             </div>
                         </li>
-                        <li class="mb40">
-                   	    	<img src="images/test/wine130_2.jpg" width="130" height="130" />
+                        <li class=""> <a href="wine_profile.html"><img src="images/test/wine130_2.jpg" width="130" height="130" /></a>
                         	<div class="meta">
-                       	    <h1 class="zh">2001拉菲珍宝</h1>
-								<h1 class="en">2001 Carruades de Lafite</h1>
+                   	      <h1 class="zh"><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+								<h1 class="en"><a href="wine_profile.html">2001 Carruades de Lafite</a></h1>
                                 <span class="gray">红葡萄酒</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
                             </div>
                         </li>
-                        <li class="last mb40">
-                   	    	<img src="images/test/wine130_3.jpg" width="130" height="130" />
+                        <li class="last"> <a href="wine_profile.html"><img src="images/test/wine130_3.jpg" width="130" height="130" /></a>
                         	<div class="meta">
-                       	    <h1 class="zh">2001拉菲珍宝</h1>
-								<h1 class="en">2001 Carruades de Lafite</h1>
+                   	      <h1 class="zh"><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+								<h1 class="en"><a href="wine_profile.html">2001 Carruades de Lafite</a></h1>
                                 <span class="gray">红葡萄酒</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
                             </div>
                         </li>
-                        <li>
-                   	    	<img src="images/test/wine130_4.jpg" width="130" height="130" />
+                        <li> <a href="wine_profile.html"><img src="images/test/wine130_4.jpg" width="130" height="130" /></a>
                         	<div class="meta">
-                           	  <h1 class="zh">2001拉菲珍宝</h1>
-								<h1 class="en">2001 Carruades de Lafite</h1>
+                           	  <h1 class="zh"><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+								<h1 class="en"><a href="wine_profile.html">2001 Carruades de Lafite</a></h1>
                                 <span class="gray">红葡萄酒</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
                           </div>
                       </li>
-                        <li>
-                   	    	<img src="images/test/wine130_5.jpg" width="130" height="130" />
+                        <li> <a href="wine_profile.html"><img src="images/test/wine130_5.jpg" width="130" height="130" /></a>
                         	<div class="meta">
-                           	  <h1 class="zh">2001拉菲珍宝</h1>
-								<h1 class="en">2001 Carruades de Lafite</h1>
+                           	  <h1 class="zh"><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+								<h1 class="en"><a href="wine_profile.html">2001 Carruades de Lafite</a></h1>
                                 <span class="gray">红葡萄酒</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
                           </div>
                       </li>
-                        <li class="last">
-                   	    	<img src="images/test/wine130.jpg" width="130" height="130" />
+                        <li class="last"> <a href="wine_profile.html"><img src="images/test/wine130.jpg" width="130" height="130" /></a>
                         	<div class="meta">
-                            	<h1 class="zh">2001拉菲珍宝</h1>
-								<h1 class="en">2001 Carruades de Lafite</h1>
+                           	  <h1 class="zh"><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+								<h1 class="en"><a href="wine_profile.html">2001 Carruades de Lafite</a></h1>
+                                <span class="gray">红葡萄酒</span>
+                                <input name="" type="checkbox" value="" checked="checked" />
+                          </div>
+                      </li>
+<li > <a href="wine_profile.html"><img src="images/test/wine130.jpg" width="130" height="130" /></a>
+                        	<div class="meta">
+                       	    <h1 class="zh"><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+								<h1 class="en"><a href="wine_profile.html">2001 Carruades de Lafite</a></h1>
                                 <span class="gray">红葡萄酒</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
                             </div>
                         </li>
-                        <div class="clear"></div>
-                    </ul>
-                </div>
-                <div class="bot"></div>
-            </div>
-<div class="paper user">
-            	<div class="top"></div>
-                <div class="mid">
-                    <ul>
-                    	<li>
-                   	    	<img src="images/userimage/1.jpg" width="50" height="50" />
+                        <li class=""> <a href="wine_profile.html"><img src="images/test/wine130_2.jpg" width="130" height="130" /></a>
                         	<div class="meta">
-                                  不良夏生
-                  <span class="location">上海</span>
+                       	    <h1 class="zh"><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+								<h1 class="en"><a href="wine_profile.html">2001 Carruades de Lafite</a></h1>
+                                <span class="gray">红葡萄酒</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
                           </div>
                       </li>
-                        <li>
-                   	    	<img src="images/userimage/3.jpg" width="50" height="50" />
+                        <li class="last"> <a href="wine_profile.html"><img src="images/test/wine130_3.jpg" width="130" height="130" /></a>
                         	<div class="meta">
-                                  不良夏生
-                                <span class="location">上海</span>
-                                <input name="" type="checkbox" value="" checked="checked" />
-                          </div>
-                        </li>
-                        <li>
-                   	    	<img src="images/userimage/04.jpg" width="50" height="50" />
-                        	<div class="meta">
-                                  不良夏生
-                                <span class="location">上海</span>
-                                <input name="" type="checkbox" value="" checked="checked" />
-                          </div>
-                        </li>
-                  <li>
-                   	    	<img src="images/userimage/07.jpg" width="50" height="50" />
-                        	<div class="meta">
-                                  不良夏生
-                                <span class="location">上海</span>
-                                <input name="" type="checkbox" value="" checked="checked" />
-</div>
-                        </li>
-                        <li class="last">
-                   	    	<img src="images/userimage/06.jpg" width="50" height="50" />
-                        	<div class="meta">
-                                  不良夏生
-                                <span class="location">上海</span>
+                       	    <h1 class="zh"><a href="wine_profile.html">2001拉菲珍宝</a></h1>
+								<h1 class="en"><a href="wine_profile.html">2001 Carruades de Lafite</a></h1>
+                                <span class="gray">红葡萄酒</span>
                                 <input name="" type="checkbox" value="" checked="checked" />
                           </div>
                       </li>
                       <div class="clear"></div>
                     </ul>
-                  </div>
+                    <div class="align_c">
+                      <label><input name="" type="checkbox" value="" checked="checked" /> 全选</label></div>
+                </div>
                 <div class="bot"></div>
-            </div>
-            <div class="align_c mt20"><a href="index.html"><img src="images/common/go.jpg" alt="开始吧！" width="176" height="51" /></a></div>
+          </div>
+            <div class="align_c mt20"><a href="guide_step5.html"><img src="images/common/btn_next.jpg" alt="下一步" width="176" height="51" /></a></div>
         </div>
     </div>
 </body>
