--- a/public/template/stylesheets/setting.css
+++ b/public/template/stylesheets/setting.css
@@ -2,7 +2,7 @@
 /*----------user setting------------*/
 .setting, .friends {padding:30px 74px;}
 .setting .right {width:280px;}
-.avatar {padding-left:40px;background:url(../images/bg/line_dotted.jpg) no-repeat left top;min-height:250px;height:auto !important;height:250px;overflow:visible;width:130px;text-align:center;}
+.avatar {padding-left:40px;background:url(../images/bg/line_dotted.jpg) no-repeat left top;min-height:250px;height:auto !important;height:250px;overflow:visible;}
 .avatar p.sample {margin-bottom:10px; position:relative;}
 .avatar p span {display:inline-block;margin-left:5px;}
 .set_module h2 {font-size:14px;margin: 30px 0;}
