--- a/app/views/themes/waterfall/devise/registrations/new.html.erb
+++ b/app/views/themes/waterfall/devise/registrations/new.html.erb
@@ -11,9 +11,9 @@
       <div class="pw">
         <%= f.password_field :password, :class => "text", :placeholder => "密码"%>
       </div>
-      <p>用户名<span class="red">*</span></p>
+      <p>昵称<span class="red">*</span></p>
       <div class="un">
-        <%= f.text_field :username, :class => "text", :placeholder => "用户名"  %>
+        <%= f.text_field :username, :class => "text", :placeholder => "昵称"  %>
       </div>
         <div class="submit">
           <span class="float_r agree">
