--- a/app/views/user_mailer/reply_comment.html.erb
+++ b/app/views/user_mailer/reply_comment.html.erb
@@ -1,4 +1,14 @@
 <p><b>亲爱的<%= @parent_user.username %>：</b></p>
-<p>用户<%= @reply_user.username %>回复了您的评论。</p>
-<p><b>--爱红酒（ iWine.com）</b></p>
+<p><%= @reply_user.username %>回复了您的评论：<b><%= @parent_comment.body %></b></p>
+<p>回复内容：</p>
+<p>
+	
+	<% @children.each do |comment| %>
+	<b><%= comment.user.username %>:</b>
+    	<%= comment.body %>
+    	<br />
+    <% end %>
+</p>
+<p><%= reply_email(@parent_comment) %></p>
+<p><b>--爱红酒（iWine.com）</b></p>
 <p>(这是一封系统自动产生的email，请勿回复。)</p>
