--- a/public/template/winery_photo_detail.html
+++ b/public/template/winery_photo_detail.html
@@ -108,7 +108,7 @@
                     <div class="content">
                     	<div class="album_left">
             <div class="mb20">
-                <div class="pre_next"><a href="#" class="btn_gray mr5"><span>前一张</span></a><a href="#" class="btn_gray"><span>后一张</span></a></div>
+                <div class="pre_next"><span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a></div>
             </div>
             <div class="photo">
                 <img src="images/test/winery_photo_b.jpg" width="537" height="334" alt="photo" />
