--- a/public/template/album_photo_detail.html
+++ b/public/template/album_photo_detail.html
@@ -67,11 +67,11 @@
       <div class="content">
    	  <div class="album_left">
         	<div class="title_btn">
+            <div class="btn_action"><a href="album_photo_list.html" class="btn_gray"><span>返回该相册</span></a></div>
               <h1>吃货那点事儿 <span class="font12">(共10张)</span></h1>
             </div>
             <div class="mb20">
-            	<div class="btn_action"><a href="album_photo_list.html" class="btn_gray"><span>返回该相册</span></a></div>
-                <div class="pre_next"><a href="#" class="btn_gray mr5"><span>前一张</span></a><a href="#" class="btn_gray"><span>后一张</span></a></div>
+                <div class="pre_next"><span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a></div>
             </div>
             <div class="photo">
                 <img src="images/test/pic600_1.jpg" width="590" height="404" alt="photo" />
