--- a/public/template/stylesheets/winery.css
+++ b/public/template/stylesheets/winery.css
@@ -72,6 +72,8 @@ ul.photo_list li .intro, .album_left .photo .intro{margin:0 0 5px 0;}
 .album_left .comment_list .main {width:520px;}
 .album_left .post_main {width:490px;}
 .album_left .post_main textarea {width:470px;height:80px;background-color:#fff;}
+.album_left .pre_next {text-align:center;}
+.album_left .count {display:inline-block;margin:0 10px;}
 .album_right h2 {margin:0 0 20px 0;}
 img.cover_s {background:url(../images/bg/bg_album_s.gif) no-repeat left top;padding:5px 8px 8px 5px;margin:0 0 5px 0;}
 .side_album_list li {margin:0 0 30px 0;}
