--- a/public/template/wine_photo_detail.html
+++ b/public/template/wine_photo_detail.html
@@ -49,7 +49,7 @@
                 <div class="wp_space_line ptb30">
                 <div class="album_left">
             <div class="mb20">
-                <div class="pre_next"><a href="#" class="btn_gray mr5"><span>前一张</span></a><a href="#" class="btn_gray"><span>后一张</span></a></div>
+                <div class="pre_next"><span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a></div>
             </div>
             <div class="photo">
                 <img src="images/test/wine.jpg" width="164" height="610" alt="photo" />
