--- a/public/template/cellar_wine_add_detail.html
+++ b/public/template/cellar_wine_add_detail.html
@@ -116,7 +116,10 @@
                    </div>
          <div class="required">
                        <label class="vm"><span>*</span>购入价格</label>
-                <input name="text" type="text" class="text price"/>元/支
+                <input name="text" type="text" class="text price"/><select name="">
+                  <option>RMB</option>
+                </select>
+                /支
                   </div>
                   <div class="optional">
                        <label>购入时间</label>
