去除图片展示页面的“添加评论”按钮

--- a/app/views/themes/waterfall/layouts/_user_fragment.html.erb
+++ b/app/views/themes/waterfall/layouts/_user_fragment.html.erb
@@ -13,7 +13,7 @@
           <li><%= link_to "找朋友", :controller => "/friends", :action => "find" %></li>
           <li><%= link_to "设置", basic_settings_path() %></li>
           <li><%= link_to "我的iWine", user_path(current_user) %></li>
-          <li><%= link_to "登出",  logout_path %></li>
+          <li><%= link_to "退出",  logout_path %></li>
         </ul>
       </span>
     </li>
