--- a/public/template/register2.html
+++ b/public/template/register2.html
@@ -45,14 +45,18 @@
     <div id="wrapper950">
     	<div id="register">
         	<div class="logreg_box">
-            	<div class="top">注册 iWine.com</div>
+            	<div class="top2"></div>
                 <div class="mid">
+                	<div class="welcome">Sheren，欢迎来到 iWine.com</div>
                 	<div class="left">
-                      <p>E-mail<span class="red">*</span></p>
+                      <div class="info">
+                      第一次来？<br />
+                      请补充资料，完成注册：</div>
+                        <p>E-mail<span class="red">*</span></p>
                           <div class="un">
                               <div class="field_with_errors">
                               <input class="text" name="" type="text"  />
-                              <label class="message">该E-mail地址无效</label>
+                              <label class="message">该 E-mail 地址无效</label>
                               </div>
                           </div>
                       <p>密码<span class="red">*</span></p>
@@ -69,21 +73,34 @@
                             <label class="message">该用户名已存在</label>
                           	</div>
                           </div>
-                      <p class="agree">
+                          <p class="agree">
                                 <input name="" type="checkbox" class="checkbox" value="" checked="checked" />
                             我已阅读并同意《<a href="#">使用条款</a>》，同时确认已达当地法定饮酒年龄。
                       </p>
                       <div class="submit">
-                          <a href="register.html"><img src="images/common/register_submit.jpg" width="138" height="51" alt="提交" /></a>
+                          <a href="register.html"><img src="images/common/register_submit_s.jpg" width="96" height="41" alt="提交" /></a>
                       </div>
                     </div>
                   <div class="right">
-               	    <div class="sns">
-                            <p><span>你也可以通过站外账号进行登录：</span></p>
-                            <p ><a href="#" target="_blank"><img src="images/common/sina-connect.gif" alt="用微博帐号登录" width="126" height="24" /></a></p>
-                            <p><a href="#" target="_blank"><img src="images/common/qq-connect.gif" alt="用QQ帐号登录" width="126" height="24" /></a></p>
-                            <p><a href="#" target="_blank"><img src="images/common/renren_login_w.png" alt="用人人帐号登录" width="126" height="24" /></a></p>
-                        </div>
+               	    <div class="info">已经在 iWine 注册过？<br />
+           	        请输入iWine 账户进行绑定：</div>
+                      <p>E-mail</p>
+                        <div class="un2">
+                              <div class="field_with_errors">
+                              <input class="text2" name="" type="text"  />
+                              <label class="message">E-mail 地址不存在</label>
+                              </div>
+                    </div>
+                    <p>密码</p>
+<div class="un2">
+                              <div class="field_with_errors">
+                              <input class="text2" name="" type="text"  />
+                              <label class="message">密码错误</label>
+                              </div>
+                          </div>
+                          <div class="submit">
+                          <a href="index.html"> <img src="images/common/btn_login.jpg" width="96" height="41" alt="登录" /></a>
+                      </div> 
                   </div>
                     <div class="clear"></div>
               </div>
