--- a/public/template/password_forget.html
+++ b/public/template/password_forget.html
@@ -40,16 +40,18 @@
     	<div id="login">
         	<div class="error">很遗憾，该邮箱地址不存在...</div>
             <div class="password">
-                <div class="boxstyle2">
-                    <div class="top"></div>
+                <div class="logreg_box">
+                    <div class="top2"></div>
                     <div class="mid">
+                    	<div class="content">
                         <h2>忘记密码了？</h2>
                         <h3>请输入注册时的邮箱地址，我们会帮助你重置密码。</h3>
                         <div class="clearfix">
                           <div class="un float_l"><input class="text"  name="" type="password" /></div>
-                            <a class="float_l ml10" href="password_resetmail_notice.html"><img src="images/common/btn_submit.jpg" width="96" height="41" alt="登录" /></a>
+                            <a class="float_l ml10" href="password_resetmail_notice.html"><img src="images/common/btn_submit.jpg" width="96" height="41" alt="登陆" /></a>
                         </div>
-                        <div class="mt10"><a href="login.html">登录</a> | <a href="register.html">注册</a></div>
+                        <div class="mt10"><a href="login.html">登陆</a> | <a href="register.html">注册</a></div>
+                        </div>
                     </div>
                     <div class="bot"></div>
                 </div>
