--- a/public/template/password_reset.html
+++ b/public/template/password_reset.html
@@ -40,9 +40,10 @@
     	<div id="login">
         	<div class="error">两次输入密码不一致</div>
             <div class="password">
-                <div class="boxstyle2">
-                    <div class="top"></div>
+                <div class="logreg_box">
+                    <div class="top2"></div>
                     <div class="mid">
+                    	<div class="content">
                         <h2>重置密码</h2>
                         	<table width="90%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
@@ -55,9 +56,10 @@
                               </tr>
                               <tr>
                                 <td>&nbsp;</td>
-                                <td><a class="" href="password_reset_success.html"><img src="images/common/btn_submit.jpg" width="96" height="41" alt="登录" /></a></td>
+                                <td><a class="" href="password_reset_success.html"><img src="images/common/btn_submit.jpg" width="96" height="41" alt="登陆" /></a></td>
                               </tr>
                             </table>
+                            </div>
                     </div>
                     <div class="bot"></div>
                 </div>
