--- a/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
@@ -22,18 +22,7 @@
         <div class="content">
           <div class="album_left">
             <div class="mb20">
-              <div class="pre_next">
-                <% if previous_photo = previous_page(@winery.photo_ids, @photo.id) %>
-                    <%= link_to winery_photo_path(@winery, previous_photo), :class => "btn_gray" do %>
-                        <span>前一张</span>
-                    <% end %>
-                <% end %>
-                <% if next_photo = next_page(@winery.photo_ids, @photo.id) %>
-                    <%= link_to winery_photo_path(@winery, next_photo), :class => "btn_gray" do %>
-                        <span>后一张</span>
-                    <% end %>
-                <% end %>
-              </div>
+              <%= render :partial => "share/photo_page_number", :locals => {:parent => @winery} %>      
             </div>
 
             <div class="photo">
