--- a/app/views/themes/waterfall/albums/photo.html.erb
+++ b/app/views/themes/waterfall/albums/photo.html.erb
@@ -18,18 +18,7 @@
              <span>返回该相册</span>
             <% end %>
           </div>
-          <div class="pre_next">
-            <% if previous_photo = previous_page(@album.image_ids, @photo.id) %>
-                <%= link_to album_photo_show_user_path(@user, @album, previous_photo), :class => "btn_gray mr5" do %>
-                    <span>前一张</span>
-                <% end %>
-            <% end %>
-            <% if next_photo = next_page(@album.image_ids, @photo.id) %>
-                <%= link_to album_photo_show_user_path(@user, @album, next_photo), :class => "btn_gray" do %>
-                    <span>后一张</span>
-                <% end %>
-            <% end %>              
-          </div>
+          <%= render :partial => "share/photo_page_number", :locals => {:parent => @album} %>
         </div>
         <div class="photo">
           <%= image_tag @photo.image_url(:large) %>
