--- a/app/views/admin/wineries/_form.html.erb
+++ b/app/views/admin/wineries/_form.html.erb
@@ -1,3 +1,6 @@
+<% form_for @model do |f| -%>
+  
+<% end -%>
 <div class="admin_wine_register">
   <%= theme_stylesheet_link_tag "admin" %>
   <%= theme_javascript_include_tag "wine_registers_variety", "region_world" %>
