--- a/app/views/themes/waterfall/users/share/_user_followings.html.erb
+++ b/app/views/themes/waterfall/users/share/_user_followings.html.erb
@@ -15,13 +15,13 @@
     <div class="userlocation"><%= user.city %></div>
     <% if is_login_user? @user #  当前访问属于自己的页面 %>
     <p><span class="cancl_fol">
-     <%= link_to "取消关注", unfollow_friends_path(:user_id => user.id) %> </span>
+     <%= link_to "取消关注", unfollow_user_path(user) %> </span>
    </p>
      <% if user.is_following current_user.id %>
         <p> 互相关注 </p>
     <% end %>
     <% else %>
-    <%= link_to follow_friends_path(:user_id => user.id ), :class => "btn_gray" do  %>
+    <%= link_to follow_user_path(user), :class => "btn_gray" do  %>
     <span>加关注</span>
     <% end %>      
     
