--- a/app/views/themes/waterfall/users/share/_recommend_users.html.erb
+++ b/app/views/themes/waterfall/users/share/_recommend_users.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="userinfo">
     <p class="username">
-      <%= link_to_user user, user_path(user.id,:trailing_slash => true) %> 
+      <%= link_to_user user, user_path(user,:trailing_slash => true) %> 
       <span class="location">上海</span>
     </p>
      <p class="statu">
