--- a/app/views/themes/waterfall/friends/_friend.html.erb
+++ b/app/views/themes/waterfall/friends/_friend.html.erb
@@ -8,7 +8,9 @@
       </div>
       
       <div class="userinfo">
-        <div class="username"><%= link_to friend.user.username, user_path(friend.user_id) %></div>
+        <div class="username">
+          <%= link_to friend.user.username, user_path(friend.user) %>
+        </div>
         <p><%= link_to follow_user_path(friend.user), :class => "btn_gray" do %>
               <span>加关注</span>
            <% end %>
