--- a/app/views/themes/waterfall/users/share/_user_followings.html.erb
+++ b/app/views/themes/waterfall/users/share/_user_followings.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="userinfo">
     <div class="username">
-      <%= link_to_user user, user_path(user.id,:trailing_slash => true) %> 
+      <%= link_to_user user, user_path(user,:trailing_slash => true) %> 
     </div>
     <div class="userlocation"><%= user.city %></div>
     <% if is_login_user? @user #  当前访问属于自己的页面 %>
